# ClionCV

./: CMakeLists.txt  README.md  main.cpp
constructors/: AbstractFactory.h  BuilderPattern.h  FactoryMethod.h  PrototypePattern.h  SimpleFactory.h  Singleton.h  constructors.md
opencv4advanced/: advanced.cpp
opencv4basic/: basic.cpp
primer/: a.cpp  primer.cpp
